--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,12 @@
             android:name=".ui.activity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Aluvery">
-        </activity>
-        <activity android:name=".ui.activity.ProductFormActivity"
-            android:exported="true">
+            android:theme="@style/Theme.Aluvery"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".ui.activity.ProductFormActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
